src/objects/Training_Endpoint__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rewrite_Image_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the endpoint is a Salesforce org, the images in a rich text area will be relative. Check this box to prepend the hostname,</description>
        <label>Rewrite Image Links</label>
        <type>Checkbox</type>
    </fields>
    <label>Training Endpoint</label>
    <pluralLabel>Training Endpoints</pluralLabel>
</CustomObject>